force-app/main/default/objects/Driver__c/fields/Active_Driver__c.field-meta.xml
<CustomField>
    <fullName>Active_Driver__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Active Driver?</label>
    <type>Checkbox</type>
</CustomField>