force-app/main/default/objects/Driver__c/fields/Driver_Depot__c.field-meta.xml
<CustomField>
    <fullName>Driver_Depot__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Driver Depot</label>
    <referenceTo>Depot__c</referenceTo>
    <relationshipLabel>Drivers</relationshipLabel>
    <relationshipName>Drivers</relationshipName>
    <type>Lookup</type>
</CustomField>