force-app/main/default/objects/Driver__c/fields/GVW_License_Held__c.field-meta.xml
<CustomField>
    <fullName>GVW_License_Held__c</fullName>
    <label>GVW License Held</label>
    <length>20</length>
    <type>Text</type>
</CustomField>