force-app/main/default/objects/Driver__c/fields/Id_Ba__c.field-meta.xml
<CustomField>
    <fullName>Id_Ba__c</fullName>
    <description>Id Driver Reference from BambooHR</description>
    <label>Id_Ba</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>