force-app/main/default/objects/Driver__c/fields/Job_Title__c.field-meta.xml
<CustomField>
    <fullName>Job_Title__c</fullName>
    <label>Job Title</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Academy</fullName>
            </value>
            <value>
                <fullName>CAT C Driver</fullName>
            </value>
            <value>
                <fullName>Cyclist</fullName>
            </value>
            <value>
                <fullName>Delivery</fullName>
            </value>
            <value>
                <fullName>Loader</fullName>
            </value>
            <value>
                <fullName>Spare Collections</fullName>
                <label>Spare</label>
            </value>
            <value>
                <fullName>Trainer</fullName>
            </value>
            <value>
                <fullName>Yard Assistant</fullName>
            </value>
            <value>
                <fullName>Collection PM Driver</fullName>
            </value>
            <value>
                <fullName>Collection AM Driver</fullName>
            </value>
            <value>
                <fullName>Delivery Driver</fullName>
            </value>
            <value>
                <fullName>Spare Driver</fullName>
            </value>
            <value>
                <fullName>Academy Trainer</fullName>
            </value>
            <value>
                <fullName>Academy Driver</fullName>
            </value>
            <value>
                <fullName>Academy Collection AM</fullName>
            </value>
            <value>
                <fullName>Spare (CAT B)</fullName>
            </value>
            <value>
                <fullName>Cyclist AM</fullName>
            </value>
            <value>
                <fullName>Waste and Education Officer</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>