force-app/main/default/objects/Driver__c/fields/Licence_Held__c.field-meta.xml
<CustomField>
    <fullName>Licence_Held__c</fullName>
    <label>Licence Held</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>C+</fullName>
            </value>
            <value>
                <fullName>B</fullName>
            </value>
            <value>
                <fullName>C</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>