force-app/main/default/objects/Driver__c/fields/New_Driver__c.field-meta.xml
<CustomField>
    <fullName>New_Driver__c</fullName>
    <formula>Start_Date__c   &gt; TODAY()-90</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>New Driver?</label>
    <type>Checkbox</type>
</CustomField>