force-app/main/default/objects/Driver__c/listViews/Active_Drivers.listView-meta.xml
<ListView>
    <fullName>Active_Drivers</fullName>
    <columns>NAME</columns>
    <columns>Start_Date__c</columns>
    <columns>End_Date__c</columns>
    <columns>Job_Title__c</columns>
    <columns>New_Driver__c</columns>
    <columns>Active_Driver__c</columns>
    <columns>Licence_Held__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Active_Driver__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Active Drivers</label>
</ListView>