force-app/main/default/objects/Driver__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>External_Id__c</columns>
    <columns>Id_Ba__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>New_Driver__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>